# cpp-gala

./: .gitignore  NOTES.md  QUESTIONS.md  README.md  pyproject.toml  setup.cfg  setup.py  test.py
src/cpp_gala/df/: interface.cpp
src/cpp_gala/integrate/: interface.cpp
src/cpp_gala/lib/include/cpp_gala/: utils.h
src/cpp_gala/lib/include/cpp_gala/df/: streamdf.h
src/cpp_gala/lib/include/cpp_gala/integrate/: integrate.h
src/cpp_gala/lib/include/cpp_gala/potential/: builtin.h  potential.h  potentialparameter.h
src/cpp_gala/lib/include/cpp_gala/simulation/: body.h  force.h  frame.h  mockstream.h  particle.h  simulation.h
src/cpp_gala/lib/include/potential/: potential.h
src/cpp_gala/lib/src/cpp_gala/df/: streamdf.cpp
src/cpp_gala/lib/src/cpp_gala/integrate/: integrate.cpp
src/cpp_gala/lib/src/cpp_gala/potential/: builtin.cpp  potential.cpp  potentialparameter.cpp
src/cpp_gala/lib/src/cpp_gala/simulation/: body.cpp  frame.cpp  mockstream.cpp  particle.cpp  simulation.cpp
src/cpp_gala/lib/src/potential/: potential.cpp  potentialparameter.cpp
src/cpp_gala/potential/: interface.cpp  test.cpp
src/cpp_gala/simulation/: interface.cpp
