[metadata]
name = cpp_gala
author = Adrian M. Price-Whelan
author_email = adrianmpw@gmail.com
description = Galactic dynamics in Python
long_description = file: README.md
long_description_content_type = "text/markdown"
license = MIT
license_file = LICENSE
url = http://gala.adrian.pw/
edit_on_github = False
github_project = adrn/gala
python_requires = ">=3.7"

[options]
zip_safe = False
packages = find:
package_dir =
    = src
install_requires =
    numpy>=1.17
    astropy>=4.2
    pyyaml
    pybind11>=2.6
    scipy>=1.2
    packaging
python_requires = >=3.7
setup_requires =
    setuptools_scm
    extension-helpers
    wheel

[options.packages.find]
where = src

# [options.package_data]
# * = *.c
# gala = extra_compile_macros.h, cconfig.pyx
# gala.coordinates.tests = *.txt, *.npy, SgrCoord_data
# gala.dynamics = */*.pyx, */*.pxd, */*.h, nbody/nbody_helper.h
# gala.integrate =
#     */*.pyx
#     */*.pxd
#     cyintegrators/*.c
#     cyintegrators/dopri/*.c
#     cyintegrators/dopri/*.h
# gala.potential =
#     src/funcdefs.h
#     potential/src/cpotential.h
#     frame/src/cframe.h
#     */*.pyx
#     */*.pxd
#     scf/tests/data/*
#     potential/tests/*.yml

[flake8]
max-line-length = 100
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
    # local variable assigned but never used
    test*.py: F841
    helpers.py: F841
    docs/tutorials/*: E703
ignore =
    E203
    E226
    E402
    E741
    W503
    W504
exclude =
    extern
    sphinx
    *parsetab.py
    conftest.py
    docs/conf.py
    setup.py
    gala/dynamics/actionangle/_genfunc
    gala/coordinates/tests/helpers.py
